# CohortProject_2020

./: .gitignore  business_proposal.md  notes.md
Project_1_RBM_and_Tomography/: H2_energy_calculator.py  RBM_helper.py  Task1-solution.ipynb  Task1.ipynb  Task2-1-solution.ipynb  Task2-2-solution.ipynb  Task2-2.ipynb  Task2-exp-lr.ipynb  Task2.ipynb  grinder-reads.fa  mnist.ipynb  task1-2.txt
Project_2_VQE_Molecules/: README.md  S1_Classical_Methods.ipynb  S1_Classical_Methods_solution.ipynb  S2_Hamiltonian_gen_solution.ipynb  S3_Unitary_Ansatz.ipynb  S3_Unitary_Ansatz_solution.ipynb  S4_Measurement_solution.ipynb  S5_Circuits.ipynb  S5_Circuits_solution.ipynb  contributions.md  exited_states.ipynb  molecule_sto-3g.hdf5  molecule_sto-3g_fci.out  molecule_sto-3g_hf.out  psi.15975.clean  psi.20348.clean  psi.25213.clean  psi.52533.clean  utility.py
Project_3_Franck_Condon_Factors/: Challenge1.ipynb  Challenge3.md  FCF_helper.py  README.md  Task1.ipynb  Task2.ipynb  Task3.ipynb  V3-e-10.npy  V3-e-100.npy  V3-e-1000.npy  V3-e-10000.npy  V3-e-20000.npy  V3-s-10.npy  V3-s-100.npy  V3-s-1000.npy  V3-s-10000.npy  V3-s-20000.npy  V3.in  challenge.ipynb  contributions.md  e-10-smooth.npy  e-100-smooth.npy  e-1000-smooth.npy  e-10000-smooth.npy  e-20000-smooth.npy  e-20000.npy  lorentzian_smoothing.py  s-20000.npy  spectrum-10.html  spectrum-100.html  (+4 more)
Project_3_Franck_Condon_Factors/Task2Code/: CMakeLists.txt  FC2.cpp  FCF_calc  V3.fc.tex  compile_commands.json  makefile  makefile-linux  makefile-mac  prod.f90
Project_3_Franck_Condon_Factors/Task2Code/.run/: Make.run.xml
(+85 files in other folders)
